--- a/xray/config.json
+++ b/xray/config.json
@@ -28,10 +28,10 @@
         "security": "reality",
         "realitySettings": {
           "show": false,
-          "dest": "duckduckgo.com:443",
+          "target": "vk.com:443",
           "xver": 0,
           "serverNames": [
-            "duckduckgo.com"
+            "vk.com"
           ],
           "privateKey": "0000000000000000000000000000000000000000000",
           "maxTimeDiff": 0,
