--- a/xray/compose.yaml
+++ b/xray/compose.yaml
@@ -7,3 +7,4 @@ services:
       - ./config.json:/etc/xray/config.json
     ports:
       - "443:443/tcp"
+    command: ["run", "-c", "/etc/xray/config.json"]
