added labels to tor image

--- a/tor/Containerfile
+++ b/tor/Containerfile
@@ -1,5 +1,11 @@
 FROM alpine:edge
 
+LABEL maintainer="Efim Ishenin <me@efima.ru>" \
+      org.opencontainers.image.title="tor" \
+      org.opencontainers.image.description="Tor Proxy" \
+      org.opencontainers.image.source="https://github.com/Efimish/compose" \
+      org.opencontainers.image.licenses="MIT"
+
 RUN echo 'https://dl-cdn.alpinelinux.org/alpine/edge/testing' >> /etc/apk/repositories && \
     apk upgrade && \
     apk add tor lyrebird webtunnel curl && \
@@ -7,7 +13,7 @@ RUN echo 'https://dl-cdn.alpinelinux.org/alpine/edge/testing' >> /etc/apk/reposi
     rm -rf /var/cache/apk/*
 
 HEALTHCHECK --timeout=10s --start-period=60s \
-  CMD curl -fIL --socks5-hostname localhost:9050 'http://2gzyxa5ihm7nsggfxnu52rck2vv4rvmdlkiu3zzui5du4xyclen53wid.onion/robots.txt' || exit 1
+  CMD curl -fIL --socks5-hostname 127.0.0.1:9050 'http://2gzyxa5ihm7nsggfxnu52rck2vv4rvmdlkiu3zzui5du4xyclen53wid.onion/robots.txt' || exit 1
 
 USER tor
 EXPOSE 9050/tcp
